# RoboStatsEKF

kitti_player/cfg/: rviz_kitti_player.rviz
kitti_player/launch/: kittiplayer_libviso2.launch  kittiplayer_libviso2.launch~
rs_ekf/: CMakeLists.txt  package.xml  package.xml~
rs_ekf/include/: ekf.h  ekf.h.autosave
rs_ekf/src/: rs_ekf.cpp
